Firefox fixes, logos still overlap in animation

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* reset non-standard styles */
 ul {
+  margin: 0;
+  padding: 0;
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   -webkit-margin-start: 0;
@@ -11,6 +13,7 @@ h2, h3, h4, h5, h6, h7 {
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* main css */
@@ -72,7 +75,7 @@ body {
 }
 
 .scrollation > a:nth-child(1) > img {
-  animation-delay: -3;
+  animation-delay: -3s;
   -webkit-animation-delay: -3s;
   -moz-animation-delay: -3s;
   -o-animation-delay: -3s;
